src/github.com/ebay/beam/query/parser/testdata/select/errors/agg_star.bql
SELECT (COUNT(?rims) AS ?rimCount) * 
WHERE {
    ?rims <color> "Red"
}
